fix icon scaling bug

--- a/static/less/site.less
+++ b/static/less/site.less
@@ -165,6 +165,7 @@ footer.footer {
     &.faqs { .bg("icons/faqs.png", no-repeat, 20px, 0); }
     &.irc { .bg("icons/irc.png"); }
     &.sites-gallery { .bg("icons/sites_gallery.png", no-repeat, 10px, 0); }
+    background-size: auto 100%;
 
     h3 {
       font-size:21px;
