--- a/static/less/site.less
+++ b/static/less/site.less
@@ -20,6 +20,14 @@
   background:@clr url("../img/@{img}") @repeat @x @y;
 }
 
+::selection {
+  background: @orange; /* Safari */
+}
+
+::-moz-selection {
+  background: @orange; /* Firefox */
+}
+
 // bst overwrite
 .btn {
   border:0;
@@ -77,7 +85,7 @@ section.banner {
 
   h1 {
     font-weight:300;
-    font-size:43px;
+    font-size:38px;
     line-height:50px;
   }
 
@@ -109,7 +117,7 @@ section.body {
     text-align:center;
     overflow:visible;
     margin:93px 20px 30px;
-    height:280px;
+    height:312px;
 
     header.box-header {
       width:243px;
@@ -122,6 +130,15 @@ section.body {
         font-size:@fs + 6;
         padding-top:78px;
         font-weight: 400;
+
+        a {
+          color:@white;
+
+          &:hover {
+            color:@orange;
+            text-decoration:none;
+          }
+        }
       }
     }
 
@@ -141,16 +158,70 @@ section.body {
 }
 
 footer.footer {
-  .bg("footer_bg.png", repeat-x);
+  .bg-clr(#395060, "footer_bg.png", repeat-x);
   padding-top:40px;
   color:@white;
 
   a {
     color:@white;
-    text-decoration:underline;
 
     &:hover {
+      color:@orange;
       text-decoration:none;
+    }
+  }
+
+  .quick-start {
+    width:88px;
+    height:295px;
+    .bg("quick_start.png");
+    text-indent:-9999px;
+    margin-top:-46px;
+  }
+
+  .get-started {
+    background:#23323b;
+    padding:5px 20px 18px;
+    margin:8px 0 40px 36px;
+    overflow:hidden;
+
+    h2 {
+      font-weight:300;
+      font-size:29px;
+      margin-bottom:15px;
+    }
+
+    ul.steps {
+      li {
+        float:left;
+        width:18%;
+        position:relative;
+        margin:0 30px 0 30px;
+
+        &.last { margin-right:0; }
+
+        .num {
+          background:@linkColor;
+          position:absolute;
+          top:0;
+          left:-30px;
+          padding:0 7px;
+          .border-radius(20px);
+          font-weight:300;
+        }
+
+        h6 {
+          font-weight:300;
+          font-size:16px;
+          line-height:16px;
+          margin:0 0 5px;
+        }
+
+        span {
+          font-size:12px;
+          line-height:12px;
+        }
+      }
     }
   }
 
@@ -169,19 +240,12 @@ footer.footer {
 
     h3 {
       font-size:21px;
+      margin-bottom:0;
     }
 
     p {
       line-height:24px;
     }
-  }
-
-  .quick-start {
-    width:88px;
-    height:295px;
-    .bg("quick_start.png");
-    text-indent:-9999px;
-    margin-top:-46px;
   }
 
   section.btm {
@@ -193,17 +257,16 @@ footer.footer {
     .social {
       a {
         display:block;
-        width:26px;
+        width:27px;
         height:26px;
         text-indent:-9999px;
         float:left;
         margin-left:15px;
         .bg("social.png");
 
-        &.fb { background-position: 0 0; }
+        &.gh { background-position: 0 0; }
         &.tw { background-position: -40px 0; }
-        &.in { background-position: -79px 0; }
-        &.bl { background-position: -119px 0; }
+        &.gp { background-position: -79px 0; }
       }
     }
   }
