--- a/static/less/site.less
+++ b/static/less/site.less
@@ -100,11 +100,11 @@ section.banner {
     padding:10px 43px;
   }
 
-  img.hero-img {
+/*  img.hero-img {
     position:absolute;
     top:20px;
     right:-5px;
-  }
+  }*/
 }
 
 section.body {
@@ -271,3 +271,11 @@ footer.footer {
     }
   }
 }
+
+/*#sequence {
+    height: 370px;
+    margin: 40px auto;
+    position: relative;
+    width: 980px;
+    overflow:hidden;
+} */
