--- a/static/less/site.less
+++ b/static/less/site.less
@@ -487,10 +487,17 @@ body.geonode-features {
       margin: -200px 0 0 -18px;
 
       h4 {
-        color: @white;
-        font-weight: 400;
         padding:222px 0 0 19px;
         font-size: 14px;
+
+        a {
+          color: @white;
+          font-weight: 400;
+
+          &:hover {
+            text-decoration: none;
+          }
+        }
       }
     }
 
