--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,4 @@
 <!doctype html>
-
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width">
-
-	<link rel="shortcut icon" href="{{ STATIC_URL }}/favicon.ico"> 
-	<link rel="stylesheet" href="{{ STATIC_URL }}/css/style.css">
-
-	{% block header %}
-	<title>Welcome</title>
-	{% endblock %}
-
-</head>
-<body>
 <html lang="en-US">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,6 +18,7 @@
         <script type="text/javascript" src="static/js/sequence.jquery-min.js"></script>
     </head>
     <body>
+		{% block header %}
         <header class="main">
             <div class="container">
                 <div class="row">
@@ -48,14 +34,15 @@
                 </div>
             </div>
         </header>
-	{% block content %}{% endblock %}
+		{% endblock header %}
 
-	{% block scripts %}
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="{{ STATIC_URL }}/js/main.js"></script>
+	{% block content %}
 	{% endblock %}
+
 	
 	{% block footer %}
+		 <footer class="footer">
+			<div class="container">
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
@@ -74,8 +61,9 @@
         </footer>
 		{% endblock footer %}
 <a href="https://github.com/GeoNode/geonode/tree/dev"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+	{% block scripts %}
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="{{ STATIC_URL }}/js/main.js"></script>
+	{% endblock %}
     </body>
-</html>
-
-</body>
 </html>
