--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,13 @@
 		<script src="{{ STATIC_URL }}/js/main.js"></script>
 	{% endblock %}
     </head>
-    <body>
+    <body class="{% block body_class %}{% endblock %}">
 		{% block header %}
         <header class="main">
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1><a class="brand" href="#">GeoNode</a></h1>
+                        <h1><a class="brand" href="/">GeoNode</a></h1>
                     </div>
                     <div class="span6">
                         <div>
