Change link to User workshop

--- a/templates/_user_features.html
+++ b/templates/_user_features.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="http://docs.geonode.org/en/latest/users/register.html" target="_blank">Follow our <strong>Users Tutorial</strong></a>
+                            <a href="/workshops/users/" target="_blank">Follow our <strong>Users Workshop</strong></a>
                         </div>
                     </div>
                 </div>
