--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,7 @@
 {% extends "base.html" %}
 
 {% block body_class %}geonode-features{% endblock %}
+
+<section class="feature-detail">
+{% block body %}{% endblock %}
+</section>
