--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,10 @@
         </header>
 		{% endblock header %}
 
+    {% block contentwrap %}
 	{% block content %}
 	{% endblock %}
+    {% endblock %}
 
 	{% block footer %}
 		 <footer class="footer">
