fixed gallery template

--- a/templates/_gallery.html
+++ b/templates/_gallery.html
@@ -5,10 +5,11 @@
                         <nav class="subnav">
                             <h5><a href="gallery.html">Gallery:</a></h5>
                             <ul class="unstyled">
-                                <li><a href="explore_discover.html"><strong>Explore and Discover</strong></a></li>
-                                <li><a href="import_manage.html"><strong>Import and Manage</strong></a></li>
-                                <li><a href="mapping.html"><strong>Interactive Mapping</strong></a></li>
-                                <li><a href="collaboration.html"><strong>Collaboration</strong></a></li>
+                                <li><a href="#africa"><strong>Africa</strong></a></li>
+                                <li><a href="#americas"><strong>Americas</strong></a></li>
+                                <li><a href="#asiapacific"><strong>Asia Pacific</strong></a></li>
+                                <li><a href="#europe"><strong>Europe</strong></a></li>
+                                <li><a href="#worldwide"><strong>World Wide</strong></a></li>
                             </ul>
                         </nav>
                     </div>
