--- a/static/less/site.less
+++ b/static/less/site.less
@@ -507,6 +507,27 @@ body.geonode-features {
     }
   }
 
+  &.user-features {
+    section.feature-details {
+      img.feature-img {
+        margin-top: 120px;
+        .opacity(50);
+      }
+
+      &.feature1 {
+        img.feature-img {
+          margin-left: 60px;
+        }
+      }
+
+      &.feature2 {
+        img.feature-img {
+          margin-left: 60px;
+        }
+      }
+    }
+  }
+
   section.continue {
     background: #f3f1ec;
     padding-top: 50px;
