--- a/static/less/site.less
+++ b/static/less/site.less
@@ -490,6 +490,10 @@ body.geonode-features {
       &.four {
         .bg("numbers/four.png", no-repeat, left, top);
       }
+
+      &.five {
+        .bg("numbers/five.png", no-repeat, right, top);
+      }
     }
 
     &.feature2 {
@@ -523,6 +527,33 @@ body.geonode-features {
       &.feature2 {
         img.feature-img {
           margin-left: 60px;
+        }
+      }
+    }
+  }
+
+  &.dev-features {
+    section.feature-details {
+      img.feature-img {
+        margin-top: 120px;
+        .opacity(50);
+      }
+
+      &.feature1 {
+        .highlighted-box {
+          background-position: 0 40px;
+        }
+      }
+
+      &.feature2 {
+        img.feature-img {
+          margin-left: 60px;
+        }
+      }
+
+      &.feature3 {
+        img.feature-img {
+          margin-left: 30px;
         }
       }
     }
