--- a/static/less/site.less
+++ b/static/less/site.less
@@ -559,6 +559,33 @@ body.geonode-features {
     }
   }
 
+  &.admin-features {
+    section.feature-details {
+      img.feature-img {
+        margin-top: 120px;
+        .opacity(50);
+      }
+
+      &.feature1 {
+        .highlighted-box {
+          background-position: 0 40px;
+        }
+      }
+
+      &.feature2 {
+        img.feature-img {
+          margin-left: 60px;
+        }
+      }
+
+      &.feature3 {
+        img.feature-img {
+          margin-left: 30px;
+        }
+      }
+    }
+  }
+
   section.continue {
     background: #f3f1ec;
     padding-top: 50px;
