styled sites gallery page

--- a/static/less/site.less
+++ b/static/less/site.less
@@ -586,6 +586,21 @@ body.geonode-features {
     }
   }
 
+  &.sites-gallery {
+    section.feature-details {
+      img.feature-img {
+        margin-top: 127px;
+      }
+
+      &.feature2 {
+        .highlighted-box {
+          margin-left: 10px;
+          margin-right: 87px;
+        }
+      }
+    }
+  }
+
   section.continue {
     background: #f3f1ec;
     padding-top: 50px;
