styled communication page

--- a/static/less/site.less
+++ b/static/less/site.less
@@ -684,3 +684,23 @@ body.geonode-features {
     }
   }
 }
+
+// communication
+body.communication {
+  article.comm-email {
+    border-bottom: 1px solid #ddd;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+  }
+
+  article.article1 {
+    margin-bottom: 50px;
+
+    img.icon {
+      float: left;
+      margin: 0 15px 10px 0;
+      .opacity(50);
+    }
+  }
+}
