added content to workshops page

--- a/static/less/site.less
+++ b/static/less/site.less
@@ -704,3 +704,23 @@ body.communication {
     }
   }
 }
+
+// workshops
+body.workshops {
+  article.comm-email {
+    border-bottom: 1px solid #ddd;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+  }
+
+  article.article1 {
+    margin-bottom: 100px;
+
+    img.icon {
+      float: left;
+      margin: 0 15px 10px 0;
+      .opacity(50);
+    }
+  }
+}
