--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,20 +5,16 @@
     <meta charset="UTF-8">
     <title>{{ page.title }}</title> 
     <link rel="shortcut icon" href="{{site.baseurl}}/static/img/favicon.ico" />
-    <meta name='description' content='GeoNode'/>
-    <meta name='keywords' content='GeoNode'/>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' href='{{site.baseurl}}/static/css/site.css' type='text/css' media='all' />
+    {% feed_meta %}
+    <meta name="description" content="GeoNode is a web-based application and platform for developing geospatial information systems (GIS) and for deploying spatial data infrastructures (SDI)"/>
+    <meta name="keywords" content="GeoNode, spatial data infrastructure, SDI, metadata, geospatial content management, geospatial portal, GIS"/>
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{{site.baseurl}}/static/css/site.css" type="text/css" media="all" />
     <!-- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-
-    <script type="text/javascript" src="{{site.baseurl}}/static/js/jquery.js"></script>
-    <script type="text/javascript" src="{{site.baseurl}}/static/js/sequence.jquery-min.js"></script>
-    <script type="text/javascript" src="{{site.baseurl}}/static/js/bootstrap.min.js"></script>
   </head>
   <body class="{{ page.body_class }}">
     <header class="main">
@@ -43,8 +39,8 @@
                 <li><a href="{{site.baseurl}}/faqs.html">FAQs</a></li>
                 <li><a href="{{site.baseurl}}/gallery/">Sites Gallery</a></li>
                 <li><a href="{{site.baseurl}}/blog/">Blog</a></li>
-                <li><a href="http://docs.geonode.org/" target = '_blank'>Documentation</a></li>
-                <li><a href="http://github.com/geonode/geonode/issues" target = '_blank'>Issue Tracker</a></li>
+                <li><a href="http://docs.geonode.org" target = "_blank">Documentation</a></li>
+                <li><a href="http://github.com/geonode/geonode/issues" target = "_blank">Issue Tracker</a></li>
               </ul>
             </div>
           </div>
@@ -62,6 +58,11 @@
     {{ content }}
 
     <a href="https://github.com/GeoNode/geonode/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
+    <script type="text/javascript" src="{{site.baseurl}}/static/js/jquery.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/static/js/sequence.jquery-min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/static/js/bootstrap.min.js"></script>
+
     <script type="text/javascript">
 
     var _gaq = _gaq || [];
