--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>{{ page.title }}</title> 
     <link rel="shortcut icon" href="{{site.baseurl}}/static/img/favicon.ico" />
-    {% feed_meta %}
+    <link type="application/atom+xml" rel="alternate" href="http://geonode.org/blog/feed.xml" title="GeoNode" />
     <meta name="description" content="GeoNode is a web-based application and platform for developing geospatial information systems (GIS) and for deploying spatial data infrastructures (SDI)"/>
     <meta name="keywords" content="GeoNode, spatial data infrastructure, SDI, metadata, geospatial content management, geospatial portal, GIS"/>
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
