Now using bootstrap 3 and adding some images to blog posts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="main">
   <div class="container">
     <div class="row">
-      <div class="span2"><h1><a class="brand" href="{{ site.baseurl }}/">GeoNode</a></h1></div>
-      <div class="span1">
+      <div class="col-md-2 col-lg-2 col-sm-3 col-xs-2"><a class="brand" href="{{ site.baseurl }}/">GeoNode</a></div>
+      <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1">
         <div class="btn-group nav-coll">
           <button type="button" class="btn-nav-coll" data-toggle="dropdown">
             <span class="icon-bar"></span>
@@ -23,7 +23,7 @@
           </ul>
         </div>
       </div>
-      <div class="span9">
+      <div class="col-md-7 col-lg-8 col-sm-7">
         <div class="pull-right">
           <a href="{{ site.baseurl }}/#install" class="btn btn-success">Install GeoNode</a>
           <a target="_blank" href="http://demo.geonode.org" class="btn btn-warning">Try the Demo</a>
