--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,18 +4,18 @@ VERSION: 1.0
 AUTHOR: <a href="http://opengeo.org/">OpenGeo</a>
 */
 
-html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, img { 
-margin: 0; 
-padding: 0; 
-border: 0; 
+html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, img {
+margin: 0;
+padding: 0;
+border: 0;
 }
 
-body { 
+body {
 background: #fff url(./images/body_tile.png) repeat-x;
 color: #262523;
 font-family: Tahoma, "Lucida Sans Unicode", "Lucida Grande", Verdana, sans-serif;
-font-size: 12px; 
-text-align: center; 
+font-size: 12px;
+text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -24,16 +24,16 @@ font-family: Tahoma, "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", Verd
 font-weight: bold;
 }
 
-h2 { 
-font-size: 1.7em; 
+h2 {
+font-size: 1.7em;
 }
 
-h3 { 
-font-size: 1.5em; 
+h3 {
+font-size: 1.5em;
 }
 
-h4 { 
-font-size: 1.3em; 
+h4 {
+font-size: 1.3em;
 }
 
 strong, em, dt, b, i {
@@ -51,7 +51,7 @@ text-decoration: underline;
 }
 
 a img {
-border: none; 
+border: none;
 }
 
 div {
@@ -222,7 +222,7 @@ display: none;
 color: #0092C8;
 border: 0;
 background: transparent;
-width: 145px; 
+width: 145px;
 margin: 7px 0 0 8px;
 font-family: Helvetica, Arial, sans-serif;
 }
@@ -286,7 +286,7 @@ margin-bottom: 5px;
 }
 
 ul.xoxo ul {
-list-style: none; 
+list-style: none;
 color: #149bcc;
 }
 
@@ -321,6 +321,11 @@ background: transparent url(./images/rss_icon.png) top left no-repeat;
 padding: 1px 0 2px 26px;
 }
 
+/*-----------------------
+Blog Posts
+-----------------------*/
+
+
 
 /*-----------------------
 Footer
@@ -351,7 +356,7 @@ padding: 0 5px;
 Content & Typography
 -----------------------*/
 #content {
-margin: 16px 22px 0; 
+margin: 16px 22px 0;
 line-height: 1.8;
 }
 
@@ -426,8 +431,8 @@ margin-bottom: 1.3em;
 line-height: 1;
 }
 
-.entry-content ul, 
-.entry-content ol, 
+.entry-content ul,
+.entry-content ol,
 .entry-content dl,
 .entry-content blockquote {
 margin: 1em 0 1em 1.5em;
