--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,14 +6,14 @@
 
     <section class="btm">
       <div class="row">
-        <div class="span6">
+        <div class="col-md-6">
           <p>This <a href="http://github.com/geonode/geonode.github.com/" target="_blank">Website</a> is licensed <a href='license.html'>CC by SA 2012.</a> - <a href='/contributors.html'>GeoNode Contributors.</a> Designed by <a href="http://www.spatialdev.com/" target="_blank">Spatial Dev</a></p>
         </div>
-        <div class="span6">
+        <div class="col-md-6">
           <div class="pull-right social">
-            <a href="http://github.com/geonode/" class="gh" target="_blank">GitHub</a>
-            <a href="https://twitter.com/GeoNode" class="tw" target="_blank">Twitter</a>
-            <a href="https://plus.google.com/u/1/b/100587124776656797019/" class="gp" target="_blank">Google+</a>
+            <a href="http://github.com/geonode/" target="_blank" alt="GitHub"><i class="fa fa-github-alt"></i></a>
+            <a href="https://twitter.com/GeoNode" class="tw" target="_blank" alt="Twitter"><i class="fa fa-twitter"></i></a>
+            <a href="https://plus.google.com/u/1/b/100587124776656797019/" class="gp" target="_blank" alt="Google+"><i class="fa fa-google-plus"></i></a>
           </div>
         </div>
       </div>
