--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -1,13 +1,13 @@
 <section class="important-links">
       <div class="row">
-        <div class="span1">
+        <div class="col-md-1 col-md-offset-1">
           <h2 class="quick-start">Quick Start</h2>
         </div>
-        <div class="span11">
+        <div class="col-md-8">
           <div class="get-started" id="install">
             <h2>Get Started Now</h2>
-            <ul class="unstyled steps">
-              <li>
+            <ul class="unstyled steps col-md-12">
+              <li class="col-md-4">
                 <div class="num">1</div>
                 <h6>Install from PPA in Ubuntu 14.04</h6>
                 <span class="mono">
@@ -16,7 +16,7 @@
                   <p>$ sudo apt-get install geonode</p>
                 </span>
               </li>
-              <li>
+              <li class="col-md-4">
                 <div class="num">2</div>
                 <h6>Set the IP address and create a superuser</h6>
                 <span class="mono">
@@ -24,57 +24,80 @@
                   <p>$ geonode createsuperuser</p>
                 </span>
               </li>
-              <li class="last">
+              <li class="last col-md-4">
                 <div class="num">3</div>
                 <h6>Import data</h6>
-                <span>
+                <span class="links">
                   <p><a href='http://docs.geonode.org/#for-administrators'>Read the admin docs</a></p>
+                  <p><a href="http://docs.geonode.org/en/master/tutorials/admin/install/quick_install.html#quick-installation"> Read the developer installation docs for Windows, OSX and other platforms</a></p>
                 </span>
               </li>
             </ul>
-            <p><a href="http://docs.geonode.org/en/master/tutorials/admin/install/quick_install.html#quick-installation"> Read the developer installation docs for Windows, OSX and other platforms</a></p>
           </div>
 
-          <div class="row">
-            <div class="span5">
-              <a href="http://docs.geonode.org/en/latest/index.html" target="_blank">
+          <div class="row documentation-items">
+            <div class="col-md-6">
+              <div class="col-md-12">
+              <i class="fa fa-print fa-5x col-md-2"></i>
+              <a class="col-md-10" href="http://docs.geonode.org/en/latest/index.html" target="_blank">
                 <article class="documentation">
                   <h3>Documentation</h3>
                   <p>Guides for users, developers, and administrators</p>
                 </article>
               </a>
-              <a href="{{site.baseurl}}/communication/#mailing-lists">
+            </div>
+
+            <div class="col-md-12">
+            <i class="fa fa-envelope-o fa-5x col-md-2"></i>
+              <a class="col-md-10" href="{{site.baseurl}}/communication/#mailing-lists">
                 <article class="mailing-list">
                   <h3>Mailing Lists</h3>
                   <p>Discussion groups for users and developers</p>
                 </article>
               </a>
-              <a href="https://github.com/GeoNode/geonode/issues" target="_blank">
+            </div>
+
+            <div class="col-md-12">
+            <i class="fa fa-pencil-square-o fa-5x col-md-2"></i>
+              <a class="col-md-10" href="https://github.com/GeoNode/geonode/issues" target="_blank">
                 <article class="issue-tracker">
                   <h3>Issue Tracker</h3>
                   <p>Bugs, feature requests, and development roadmap</p>
                 </article>
               </a>
             </div>
-            <div class="span5">
-              <a href="{{site.baseurl}}/faqs.html">
+          </div>
+
+          <div class="col-md-6">
+            <div class="col-md-12">
+            <i class="fa fa-question-circle fa-5x col-md-2"></i>
+              <a class="col-md-10" href="{{site.baseurl}}/faqs.html">
                 <article class="faqs">
                   <h3>FAQs</h3>
                   <p>Frequently Asked Questions about GeoNode</p>
                 </article>
               </a>
-              <a href="{{site.baseurl}}/communication/#irc">
+            </div>
+
+            <div class="col-md-12">
+            <i class="fa fa-comments-o fa-5x col-md-2"></i>
+              <a class="col-md-10" href="{{site.baseurl}}/communication/#irc">
                 <article class="irc">
                   <h3>IRC</h3>
                   <p>Real-time discussion and help at #geonode on freenode.net</p>
                 </article>
               </a>
-              <a href="{{site.baseurl}}/gallery/">
+            </div>
+
+            <div class="col-md-12">
+            <i class="fa fa-picture-o fa-5x col-md-2"></i>
+              <a class="col-md-10" href="{{site.baseurl}}/gallery/">
                 <article class="sites-gallery">
                   <h3>Gallery</h3>
                   <p>A collection of live sites built using GeoNode</p>
                 </article>
               </a>
+            </div>
             </div>
           </div>
         </div>
