--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,7 @@ layout: blank
     {% for dns in site.dns_prefetch %}
     <link rel="dns-prefetch" href="{{ dns }}">
     {% endfor %}
-    <title>{{ page.title }}</title> 
+    <title>{{ page.title }}</title>
     <link rel="shortcut icon" href="{{ site.baseurl }}/static/img/favicon.ico" />
     <link type="application/atom+xml" rel="alternate" href="http://geonode.org/blog/feed.xml" title="GeoNode" />
     <meta name="description" content="{{ site.description }}"/>
@@ -18,6 +18,8 @@ layout: blank
     <link href="https://fonts.googleapis.com/css?family={{ font }}" rel="stylesheet" type="text/css">
     {% endfor %}
     <link rel="stylesheet" href="{{site.baseurl}}/static/css/site.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{site.baseurl}}/static/css/bootstrap.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{site.baseurl}}/static/css/font-awesome.min.css">
     <!-- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
