--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -11,7 +11,7 @@
                 <div class="num">1</div>
                 <h6>Install from PPA in Ubuntu 14.04</h6>
                 <span class="mono">
-                  <p>$ sudo add-apt-repository ppa:geonode/testing</p>
+                  <p>$ sudo add-apt-repository ppa:geonode/stable</p>
                   <p>$ sudo apt-get update</p>
                   <p>$ sudo apt-get install geonode</p>
                 </span>
