--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -1,9 +1,9 @@
 <section class="important-links">
       <div class="row">
-        <div class="col-md-1 col-md-offset-1">
+        <div class="col-md-1 col-md-offset-1 col-lg-1 col-lg-offset-1 col-sm-1 col-sm-offset-1">
           <h2 class="quick-start">Quick Start</h2>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8">
           <div class="get-started" id="install">
             <h2>Get Started Now</h2>
             <ul class="unstyled steps col-md-12">
@@ -36,10 +36,10 @@
           </div>
 
           <div class="row documentation-items">
-            <div class="col-md-6">
-              <div class="col-md-12">
-              <i class="fa fa-print fa-5x col-md-2"></i>
-              <a class="col-md-10" href="http://docs.geonode.org/en/latest/index.html" target="_blank">
+            <div class="col-md-6 col-sm-12">
+              <div class="col-md-12 col-sm-12">
+              <i class="fa fa-print fa-5x col-md-2 col-sm-2"></i>
+              <a class="col-md-10 col-lg-10 col-sm-10" href="http://docs.geonode.org/en/latest/index.html" target="_blank">
                 <article class="documentation">
                   <h3>Documentation</h3>
                   <p>Guides for users, developers, and administrators</p>
@@ -48,8 +48,8 @@
             </div>
 
             <div class="col-md-12">
-            <i class="fa fa-envelope-o fa-5x col-md-2"></i>
-              <a class="col-md-10" href="{{site.baseurl}}/communication/#mailing-lists">
+            <i class="fa fa-envelope-o fa-5x col-md-2 col-sm-2"></i>
+              <a class="col-md-10 col-sm-10" href="{{site.baseurl}}/communication/#mailing-lists">
                 <article class="mailing-list">
                   <h3>Mailing Lists</h3>
                   <p>Discussion groups for users and developers</p>
@@ -58,8 +58,8 @@
             </div>
 
             <div class="col-md-12">
-            <i class="fa fa-pencil-square-o fa-5x col-md-2"></i>
-              <a class="col-md-10" href="https://github.com/GeoNode/geonode/issues" target="_blank">
+            <i class="fa fa-pencil-square-o fa-5x col-md-2 col-sm-2"></i>
+              <a class="col-md-10 col-sm-10" href="https://github.com/GeoNode/geonode/issues" target="_blank">
                 <article class="issue-tracker">
                   <h3>Issue Tracker</h3>
                   <p>Bugs, feature requests, and development roadmap</p>
@@ -70,8 +70,8 @@
 
           <div class="col-md-6">
             <div class="col-md-12">
-            <i class="fa fa-question-circle fa-5x col-md-2"></i>
-              <a class="col-md-10" href="{{site.baseurl}}/faqs.html">
+            <i class="fa fa-question-circle fa-5x col-md-2 col-sm-2"></i>
+              <a class="col-md-10 col-sm-10" href="{{site.baseurl}}/faqs.html">
                 <article class="faqs">
                   <h3>FAQs</h3>
                   <p>Frequently Asked Questions about GeoNode</p>
@@ -80,8 +80,8 @@
             </div>
 
             <div class="col-md-12">
-            <i class="fa fa-comments-o fa-5x col-md-2"></i>
-              <a class="col-md-10" href="{{site.baseurl}}/communication/#irc">
+            <i class="fa fa-comments-o fa-5x col-md-2 col-sm-2"></i>
+              <a class="col-md-10 col-sm-10" href="{{site.baseurl}}/communication/#irc">
                 <article class="irc">
                   <h3>IRC</h3>
                   <p>Real-time discussion and help at #geonode on freenode.net</p>
@@ -90,8 +90,8 @@
             </div>
 
             <div class="col-md-12">
-            <i class="fa fa-picture-o fa-5x col-md-2"></i>
-              <a class="col-md-10" href="{{site.baseurl}}/gallery/">
+            <i class="fa fa-picture-o fa-5x col-md-2 col-sm-2"></i>
+              <a class="col-md-10 col-sm-10" href="{{site.baseurl}}/gallery/">
                 <article class="sites-gallery">
                   <h3>Gallery</h3>
                   <p>A collection of live sites built using GeoNode</p>
