--- a/_includes/important_links.html
+++ b/_includes/important_links.html
@@ -15,6 +15,10 @@
                   <p>$ sudo apt-get update</p>
                   <p>$ sudo apt-get install geonode</p>
                 </span>
+                <h6>Install from EXE in Windows</h6>
+                <span class="mono">
+                  <p><a href="http://build.geonode.org/windows/GeoNode-2.4.x.exe">GeoNode-2.4.x.exe</a></p>
+                </span>
               </li>
               <li class="col-md-4">
                 <div class="num">2</div>
