fix admin users and dev features

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
             <span class="icon-bar"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="{{ site.baseurl }}/user_features.html">For Users</a></li>
-            <li><a href="{{ site.baseurl }}/dev_features.html">For Developers</a></li>
-            <li><a href="{{ site.baseurl }}/admin_features.html">For Admins</a></li>
+            <li><a href="{{ site.baseurl }}/user_features">For Users</a></li>
+            <li><a href="{{ site.baseurl }}/dev_features">For Developers</a></li>
+            <li><a href="{{ site.baseurl }}/admin_features">For Admins</a></li>
             <li><a href="http://docs.geonode.org/en/latest/tutorials/">Workshops</a></li>
             <li><a href="{{ site.baseurl }}/communication/">Communication</a></li>
             <li><a href="{{ site.baseurl }}/faqs">FAQs</a></li>
