add commercial providers page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
             <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
             <li><a href="http://docs.geonode.org" target = "_blank">Documentation</a></li>
             <li><a href="http://github.com/geonode/geonode/issues" target = "_blank">Issue Tracker</a></li>
+            <li><a href="{{ site.baseurl }}/providers/">Commercial Providers</a></li>
           </ul>
         </div>
       </div>
