jobs board and other fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,14 +21,16 @@
             <li><a href="http://docs.geonode.org" target = "_blank">Documentation</a></li>
             <li><a href="http://github.com/geonode/geonode/issues" target = "_blank">Issue Tracker</a></li>
             <li><a href="{{ site.baseurl }}/providers/">Commercial Providers</a></li>
+            <li><a href="{{ site.baseurl }}/jobs/">Jobs</a></li>
           </ul>
         </div>
       </div>
       <div class="col-md-7 col-lg-8 col-sm-7">
         <div class="pull-right">
-          <a href="{{ site.baseurl }}/#install" class="btn btn-success">Install GeoNode</a>
+          <a href="{{ site.baseurl }}/gallery" class="btn btn-success">Gallery</a>
+          <a href="{{ site.baseurl }}/#install" class="btn btn-success">Quick Start</a>
           <a target="_blank" href="http://demo.geonode.org" class="btn btn-warning">Try the Demo</a>
-          <a href="{{ site.baseurl }}/blog/" class="btn btn-success">Read our Blog</a>
+          <a href="{{ site.baseurl }}/blog/" class="btn btn-success">Blog</a>
         </div>
       </div>
     </div>
